feat: modification pour avoir une version clean du code