@@ -5,11 +5,16 @@ import com.mailjet.client.MailjetClient;
 import com.mailjet.client.MailjetRequest;
 import com.mailjet.client.MailjetResponse;
 import com.mailjet.client.resource.Emailv31;
+import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+import org.springframework.util.FileCopyUtils;
+
+import java.nio.charset.StandardCharsets;
 
 @Service
 @Slf4j
@@ -29,6 +34,39 @@ public class EmailService {
 
     @Value("${app.frontend-url}")
     private String frontendUrl;
+
+    @Value("classpath:templates/email/reset-password.html")
+    private Resource resetPasswordTemplateResource;
+
+    @Value("classpath:templates/email/welcome.html")
+    private Resource welcomeTemplateResource;
+
+    @Value("classpath:templates/email/report-approval.html")
+    private Resource reportApprovalTemplateResource;
+
+    @Value("classpath:templates/email/stats-section.html")
+    private Resource statsSectionTemplateResource;
+
+    private String resetPasswordTemplate;
+    private String welcomeTemplate;
+    private String reportApprovalTemplate;
+    private String statsSectionTemplate;
+
+    @PostConstruct
+    void loadEmailTemplates() {
+        try {
+            resetPasswordTemplate  = new String(FileCopyUtils.copyToByteArray(resetPasswordTemplateResource.getInputStream()),  StandardCharsets.UTF_8);
+            welcomeTemplate        = new String(FileCopyUtils.copyToByteArray(welcomeTemplateResource.getInputStream()),        StandardCharsets.UTF_8);
+            reportApprovalTemplate = new String(FileCopyUtils.copyToByteArray(reportApprovalTemplateResource.getInputStream()), StandardCharsets.UTF_8);
+            statsSectionTemplate   = new String(FileCopyUtils.copyToByteArray(statsSectionTemplateResource.getInputStream()),   StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            log.error("Failed to load email templates", e);
+            resetPasswordTemplate  = "";
+            welcomeTemplate        = "";
+            reportApprovalTemplate = "";
+            statsSectionTemplate   = "";
+        }
+    }
 
     public void sendResetPasswordEmail(String toEmail, String toName, String resetLink) {
         try {
@@ -104,74 +142,31 @@ public class EmailService {
     }
 
     private String buildResetPasswordHtml(String name, String resetLink) {
-        return """
-                <!DOCTYPE html>
-                <html>
-                <head><meta charset="UTF-8"></head>
-                <body style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px;">
-                  <div style="background: #1976d2; color: white; padding: 20px; border-radius: 8px 8px 0 0; text-align: center;">
-                    <h1 style="margin: 0;">CallFlow</h1>
-                  </div>
-                  <div style="background: #f5f5f5; padding: 30px; border-radius: 0 0 8px 8px;">
-                    <h2>Réinitialisation du mot de passe</h2>
-                    <p>Bonjour %s,</p>
-                    <p>Vous avez demandé la réinitialisation de votre mot de passe. Cliquez sur le bouton ci-dessous :</p>
-                    <div style="text-align: center; margin: 30px 0;">
-                      <a href="%s" style="background: #1976d2; color: white; padding: 14px 28px; text-decoration: none; border-radius: 6px; font-size: 16px;">
-                        Réinitialiser mon mot de passe
-                      </a>
-                    </div>
-                    <p style="color: #666; font-size: 13px;">Ce lien expire dans <strong>30 minutes</strong>.</p>
-                    <p style="color: #666; font-size: 13px;">Si vous n'avez pas demandé cette réinitialisation, ignorez cet email.</p>
-                    <hr style="border: none; border-top: 1px solid #ddd; margin: 20px 0;">
-                    <p style="color: #999; font-size: 12px; text-align: center;">CallFlow - Centre d'Appels</p>
-                  </div>
-                </body>
-                </html>
-                """.formatted(name != null ? name : "", resetLink);
+        return String.format(resetPasswordTemplate, name != null ? name : "", resetLink);
     }
 
     private String buildWelcomeHtml(String name, String username, String tempPassword) {
-        return """
-                <!DOCTYPE html>
-                <html>
-                <head><meta charset="UTF-8"></head>
-                <body style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px;">
-                  <div style="background: #1976d2; color: white; padding: 20px; border-radius: 8px 8px 0 0; text-align: center;">
-                    <h1 style="margin: 0;">CallFlow</h1>
-                  </div>
-                  <div style="background: #f5f5f5; padding: 30px; border-radius: 0 0 8px 8px;">
-                    <h2>Bienvenue sur CallFlow !</h2>
-                    <p>Bonjour %s,</p>
-                    <p>Votre compte a été créé avec succès. Voici vos identifiants :</p>
-                    <div style="background: white; padding: 20px; border-radius: 6px; margin: 20px 0;">
-                      <p><strong>Nom d'utilisateur :</strong> %s</p>
-                      <p><strong>Mot de passe temporaire :</strong> %s</p>
-                    </div>
-                    <p style="color: #e53935; font-weight: bold;">Veuillez changer votre mot de passe après la première connexion.</p>
-                    <hr style="border: none; border-top: 1px solid #ddd; margin: 20px 0;">
-                    <p style="color: #999; font-size: 12px; text-align: center;">CallFlow - Centre d'Appels</p>
-                  </div>
-                </body>
-                </html>
-                """.formatted(
-                name != null ? name : "",
-                username,
-                tempPassword
-        );
+        return String.format(welcomeTemplate, name != null ? name : "", username, tempPassword);
     }
 
     public void sendReportApprovalEmail(String toEmail, String toName, String requestTitle, Long reportId) {
-        sendReportApprovalEmail(toEmail, toName, requestTitle, reportId, null);
+        sendReportApprovalEmail(toEmail, toName, requestTitle, reportId, null, null, null, null);
     }
 
-    public void sendReportApprovalEmail(String toEmail, String toName, String requestTitle, Long reportId, String aiInsightsJson) {
+    public void sendReportApprovalEmail(String toEmail, String toName, String requestTitle, Long reportId,
+                                        String aiInsightsJson, Integer totalContacts,
+                                        Integer contactedContacts, Double contactRate) {
         try {
             MailjetClient client = new MailjetClient(
                     ClientOptions.builder().apiKey(apiKey).apiSecretKey(secretKey).build());
 
-            String reportUrl = frontendUrl + "/apps/reports/details/" + reportId;
-            String htmlBody = buildReportApprovalHtml(toName, requestTitle, reportId, reportUrl, aiInsightsJson);
+            String reportUrl  = frontendUrl + "/apps/reports/details/" + reportId;
+            String pdfUrl     = frontendUrl + "/api/reports/" + reportId + "/pdf";
+            String htmlBody   = buildReportApprovalHtml(toName, requestTitle, reportId,
+                                    reportUrl, pdfUrl, aiInsightsJson,
+                                    totalContacts, contactedContacts, contactRate);
+
+            log.info("Sending approval email: from={} to={} reportId={}", senderEmail, toEmail, reportId);
 
             MailjetRequest request = new MailjetRequest(Emailv31.resource)
                     .property(Emailv31.MESSAGES, new JSONArray()
@@ -183,121 +178,120 @@ public class EmailService {
                                             .put(new JSONObject()
                                                     .put("Email", toEmail)
                                                     .put("Name", toName != null ? toName : toEmail)))
-                                    .put(Emailv31.Message.SUBJECT, requestTitle + " (approuvé)")
+                                    .put(Emailv31.Message.SUBJECT, "✅ Rapport approuvé : " + requestTitle)
                                     .put(Emailv31.Message.HTMLPART, htmlBody)
                                     .put(Emailv31.Message.TEXTPART,
                                             "Bonjour " + (toName != null ? toName : "") +
-                                                    ",\n\nVotre demande \"" + requestTitle +
-                                                    "\" a été approuvée et le rapport est disponible.\n\n" +
-                                                    "Voir le rapport : " + reportUrl + "\n\nCallCenter")
+                                            ",\n\nVotre demande \"" + requestTitle + "\" a été approuvée.\n\n" +
+                                            "Voir le rapport : " + reportUrl + "\n" +
+                                            "Télécharger le PDF : " + pdfUrl + "\n\nCallCenter")
                             ));
 
             MailjetResponse response = client.post(request);
             if (response.getStatus() == 200) {
-                log.info("Report approval email sent to {}", toEmail);
+                log.info("Report approval email sent successfully to {}", toEmail);
             } else {
-                log.error("Mailjet error {}: {}", response.getStatus(), response.getData());
+                String errorDetail = response.getData() != null ? response.getData().toString() : "no body";
+                log.error("Mailjet rejected email: status={} body={}", response.getStatus(), errorDetail);
+                throw new RuntimeException("Mailjet error " + response.getStatus() + ": " + errorDetail);
             }
+        } catch (RuntimeException e) {
+            throw e;
         } catch (Exception e) {
             log.error("Failed to send report approval email to {}: {}", toEmail, e.getMessage());
+            throw new RuntimeException("Échec de l'envoi d'email: " + e.getMessage(), e);
         }
     }
 
-    private String buildReportApprovalHtml(String name, String requestTitle, Long reportId, String reportUrl, String aiInsightsJson) {
-        String aiSection = buildAiInsightsSection(aiInsightsJson);
-        return """
-                <!DOCTYPE html>
-                <html>
-                <head><meta charset="UTF-8"></head>
-                <body style="margin:0; padding:0; background:#f4f5f7; font-family: 'Segoe UI', Arial, sans-serif;">
-                  <table width="100%%" cellpadding="0" cellspacing="0" border="0" style="background:#f4f5f7; padding:32px 16px;">
-                    <tr><td align="center">
-                      <table width="600" cellpadding="0" cellspacing="0" border="0" style="max-width:600px; background:#ffffff; border-radius:12px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
-                        <!-- Purple gradient header -->
-                        <tr>
-                          <td style="background: linear-gradient(135deg, #667eea 0%%, #764ba2 100%%); padding:36px 24px; text-align:center;">
-                            <div style="font-size:32px; margin-bottom:8px;">%s</div>
-                            <h1 style="color:#ffffff; font-size:24px; margin:0; font-weight:600;">Rapport Approuvé</h1>
-                            <p style="color:#e0e7ff; margin:8px 0 0; font-size:14px;">Votre demande a été traitée avec succès</p>
-                          </td>
-                        </tr>
-                        <!-- Body -->
-                        <tr>
-                          <td style="padding:32px 32px 16px;">
-                            <h2 style="color:#1f2937; font-size:20px; margin:0 0 16px;">📊 %s (approuvé)</h2>
-                            <p style="color:#374151; line-height:1.6; margin:0 0 16px;">Bonjour <strong>%s</strong>,</p>
-                            %s
-                          </td>
-                        </tr>
-                        <!-- Button -->
-                        <tr>
-                          <td align="center" style="padding:8px 32px 24px;">
-                            <a href="%s" style="display:inline-block; background:linear-gradient(135deg,#667eea 0%%,#764ba2 100%%); color:#ffffff; text-decoration:none; padding:14px 32px; border-radius:999px; font-weight:600; font-size:15px; box-shadow:0 4px 10px rgba(102,126,234,0.3);">
-                              👁  Voir le Rapport
-                            </a>
-                          </td>
-                        </tr>
-                        <!-- Fallback link -->
-                        <tr>
-                          <td style="padding:0 32px 24px;">
-                            <p style="color:#6b7280; font-size:13px; margin:0 0 4px;">Si le bouton ne fonctionne pas, copiez et collez ce lien dans votre navigateur :</p>
-                            <p style="margin:0;"><a href="%s" style="color:#667eea; word-break:break-all; font-size:13px;">%s</a></p>
-                          </td>
-                        </tr>
-                        <!-- Footer -->
-                        <tr>
-                          <td style="background:#f9fafb; padding:20px 32px; text-align:center; border-top:1px solid #e5e7eb;">
-                            <p style="margin:0 0 4px; color:#667eea; font-weight:700; font-size:15px;">CallCenter</p>
-                            <p style="margin:0; color:#9ca3af; font-size:12px;">Ce message a été envoyé automatiquement. Merci de ne pas y répondre.</p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td></tr>
-                  </table>
-                </body>
-                </html>
-                """.formatted(
-                "✅",
-                requestTitle != null ? requestTitle : "Rapport",
-                name != null ? name : "",
+    private String buildReportApprovalHtml(String name, String requestTitle, Long reportId,
+                                           String reportUrl, String pdfUrl, String aiInsightsJson,
+                                           Integer totalContacts, Integer contactedContacts, Double contactRate) {
+        String statsSection = buildStatsSection(totalContacts, contactedContacts, contactRate);
+        String aiSection    = buildAiInsightsSection(aiInsightsJson);
+        String safeTitle    = escapeHtml(requestTitle != null ? requestTitle : "Rapport");
+        String safeName     = escapeHtml(name != null ? name : "");
+
+        return String.format(reportApprovalTemplate,
+                safeName, safeTitle,
+                statsSection,
                 aiSection,
-                reportUrl,
-                reportUrl,
-                reportUrl
+                reportUrl, pdfUrl,
+                reportUrl, reportUrl,
+                pdfUrl, pdfUrl
         );
+    }
+
+    private String buildStatsSection(Integer totalContacts, Integer contactedContacts, Double contactRate) {
+        if (totalContacts == null) return "";
+        int contacted = contactedContacts != null ? contactedContacts : 0;
+        double rate   = contactRate != null ? contactRate : 0.0;
+        String rateColor = rate >= 70 ? "#059669" : rate >= 40 ? "#d97706" : "#dc2626";
+
+        return String.format(statsSectionTemplate, totalContacts, contacted, rateColor, rate);
     }
 
     private String buildAiInsightsSection(String aiInsightsJson) {
         if (aiInsightsJson == null || aiInsightsJson.isBlank()) {
-            return "<p style=\"color:#374151; line-height:1.6; margin:0;\">Votre rapport a été approuvé et est maintenant disponible au téléchargement.</p>";
+            return "<tr><td style=\"padding:0 32px 8px;\">"
+                 + "<p style=\"color:#374151;line-height:1.6;margin:0;\">Le rapport d&eacute;taill&eacute; est disponible en ligne."
+                 + " Cliquez sur les boutons ci-dessous pour le consulter ou le t&eacute;l&eacute;charger.</p>"
+                 + "</td></tr>";
         }
         try {
             JSONObject insights = new JSONObject(aiInsightsJson);
             StringBuilder sb = new StringBuilder();
-            sb.append("<div style=\"background:#f3f4f6; border-left:4px solid #667eea; border-radius:6px; padding:16px 20px; margin:16px 0;\">");
-            sb.append("<p style=\"margin:0 0 10px; color:#4c1d95; font-weight:700; font-size:13px; letter-spacing:0.5px;\">=== ANALYSE IA ===</p>");
+            sb.append("<tr><td style=\"padding:0 32px 8px;\">")
+              .append("<div style=\"background:#faf5ff;border-radius:12px;padding:20px 24px;border:1px solid #e9d5ff;\">")
+              .append("<p style=\"margin:0 0 12px;color:#6d28d9;font-weight:700;font-size:13px;")
+              .append("text-transform:uppercase;letter-spacing:0.8px;\">&#x1F916; Analyse IA</p>");
 
             String summary = insights.optString("summary", "");
             if (!summary.isBlank()) {
-                sb.append("<p style=\"margin:0 0 8px; color:#374151; font-weight:600; font-size:14px;\">Insights générés par l'intelligence artificielle</p>");
-                sb.append("<p style=\"margin:0; color:#4b5563; line-height:1.6; font-size:13px;\">")
-                  .append(escapeHtml(truncate(summary, 600)))
+                sb.append("<p style=\"margin:0 0 12px;color:#1f2937;font-size:14px;line-height:1.7;\">")
+                  .append(escapeHtml(truncate(summary, 500)))
                   .append("</p>");
             }
 
+            // Key findings (first 2)
+            org.json.JSONArray findings = insights.optJSONArray("keyFindings");
+            if (findings != null && findings.length() > 0) {
+                sb.append("<p style=\"margin:0 0 6px;color:#4c1d95;font-weight:600;font-size:13px;\">Observations clés :</p>");
+                sb.append("<ul style=\"margin:0 0 12px;padding-left:18px;color:#374151;font-size:13px;line-height:1.7;\">");
+                int limit = Math.min(findings.length(), 2);
+                for (int i = 0; i < limit; i++) {
+                    org.json.JSONObject f = findings.optJSONObject(i);
+                    if (f != null) {
+                        String finding = f.optString("finding", "");
+                        if (!finding.isBlank()) {
+                            sb.append("<li>").append(escapeHtml(truncate(finding, 150))).append("</li>");
+                        }
+                    }
+                }
+                sb.append("</ul>");
+            }
+
+            // Sentiment
             JSONObject sentiment = insights.optJSONObject("sentimentAnalysis");
             if (sentiment != null) {
                 String overall = sentiment.optString("overallSentiment", "");
+                double pos = sentiment.optDouble("positivePercent", 0);
+                double neg = sentiment.optDouble("negativePercent", 0);
                 if (!overall.isBlank()) {
-                    sb.append("<p style=\"margin:10px 0 0; color:#6b7280; font-size:12px;\"><strong>Sentiment global :</strong> ")
-                      .append(escapeHtml(overall)).append("</p>");
+                    sb.append("<div style=\"display:inline-block;background:#ede9fe;border-radius:20px;padding:4px 12px;\">")
+                      .append("<span style=\"font-size:12px;color:#5b21b6;font-weight:600;\">Sentiment : ")
+                      .append(escapeHtml(overall))
+                      .append(String.format(" · 😊 %.0f%% · 😞 %.0f%%", pos, neg))
+                      .append("</span></div>");
                 }
             }
-            sb.append("</div>");
+
+            sb.append("</div></td></tr>");
             return sb.toString();
         } catch (Exception e) {
             log.warn("Could not parse AI insights JSON for email: {}", e.getMessage());
-            return "<p style=\"color:#374151; line-height:1.6; margin:0;\">Votre rapport a été approuvé et est maintenant disponible.</p>";
+            return "<tr><td style=\"padding:0 32px 8px;\">"
+                 + "<p style=\"color:#374151;line-height:1.6;margin:0;\">Le rapport est disponible en ligne.</p>"
+                 + "</td></tr>";
         }
     }
 
